--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
           <!-- Short Bio -->
           <p class="profile-description">
             <!-- <img src="./.github/hello.gif" alt="Hello"> -->
+            
             <span>
-              Me chamo <i>Lucas Lamar</i>, Dev Full Stack
+              Me chamo <i>Lucas Lamar</i>, sou  Desenvolvedor Full Stack
               <strong>Junior</strong>.
             </span>
           </p>
