--- a/index.html
+++ b/index.html
@@ -187,12 +187,30 @@
           >
           <br /> -->
 
+          <!-- Spotify -->
+          <a
+            class="button button-spotify"
+            target="_blank"
+            href="https://open.spotify.com/user/12159215043?si=e69dfc1adb1948e3"
+            ><img class="icon" src="icons/spotify.svg"/>Spotify</a
+          >
+          <br />
+          
+          <!-- PayPal -->
+          <a
+          class="button button-paypol"
+          target="_blank"
+          href="https://streamelements.com/theclaubr/tip"
+          ><img class="icon" src="icons/paypal.svg" />PayPal</a
+          >
+          <br />
+
           <br />
           <!-- <p>Build your own by forking <a href="https://littlelink.io">LittleLink</a>.</p> -->
 
           <footer>
             <p>
-              Entre em contato
+              Entre em contato -->
               <a target="_blank" href=""
                 >lucass.lamar@gmail.com</a
               >
