--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <!-- Google Adsense 
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <script
+    <!-- <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
       crossorigin="anonymous"
@@ -88,7 +88,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6351626182513576"
      crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body> -->
     <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <div class="container">
